# training_bot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_init.py
src/api/: app.py  schemas.py
src/bot/: app.py  main.py  states.py
src/bot/handlers/: edit_flow.py  exercise_flow.py  main_menu.py  start.py  workout_flow.py
src/bot/keyboards/: inline.py  reply.py
src/bot/middlewares/: event_logger.py  rate_limit.py
src/core/: config.py  logging.py
src/db/: models.py  seed.py  session.py
src/db/repositories/: catalog.py  users.py  workouts.py
src/services/: formatters.py  validators.py  webapp_auth.py
tests/: conftest.py
tests/api/: test_api_workouts.py
tests/integration/: test_workout_flow_repo.py
tests/unit/: test_config.py  test_formatters.py  test_validators.py
