[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workout-bot-backend"
version = "0.1.0"
description = "Telegram workout tracker bot backend"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.5,<4",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "aiosqlite>=0.20,<1",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "pydantic-settings>=2.3,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "coverage>=7,<8",
  "ruff>=0.6,<1",
  "mypy>=1.10,<2",
  "httpx>=0.27,<1",
  "types-python-dateutil>=2.9.0.20240316",
  "pre-commit>=3.7,<4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = []
mypy_path = "src"
exclude = ["alembic"]
